--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -31,6 +31,9 @@
     </filter>
 
     <logging>
+      <log type="coverage-html" target="build/coverage"
+           charset="UTF-8" yui="true" highlight="true"
+           lowUpperBound="35" highLowerBound="70"/>
       <log type="coverage-clover" target="build/logs/clover.xml"/>
     </logging>
 </phpunit>
